# htoolv3

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  TODO  test.xml
.github/: test.xml
.github/configs/: htool-macho-tests.yaml
.github/scripts/: common.py  macho_test_parser.py  test_runner.py
.github/workflows/: main.yml  main_linux.yml  main_macos.yml  test.yml  tests.yml
config/: version.cmake  version.h.j2  version_fetch.py  version_generator.py
docs/: Canvas Quiz.md  Project Proposal.md  References.md  Research Notes.md  demo-script.txt  project_idea.txt  project_ideas.txt  research_notes_ios16_kernel.txt  the_plan.txt
docs/.obsidian/: app.json  workspace.json
docs/Literature Review/: introduction.tex  main.tex  references.bib  summary.tex  themes-existing-solutions.tex  themes-iboot.tex  themes-kernelcache.tex  themes-macho.tex  themes-macos-and-reverse-engineering.tex  themes-macos.tex  themes-reverse-engineering.tex
docs/Project Proposal/: introduction.tex  proposed-solution.tex
include/: colours.h  htool-client.h  htool-error.h  htool-loader.h  htool-version.h  htool.h  usage.h  version.h
include/commands/: analyse.h  codesigning.h  disassembler.h  macho.h
include/darwin/: darwin.h  kernel.h  kext.h  mach_traps.h
include/disassembler/: parser.h
include/elf/: elf-loader.h
include/iboot/: iboot.h
include/secure_enclave/: sep.h
src/: CMakeLists.txt  MasterVersion  analyse.c  codesigning.c  error.c  loader.c  macho.c  main.c  nm.c  usage.c
src/darwin/: darwin.c  kernel.c  kext.c  mach_traps.c
(+6 files in other folders)
